--- a/server/build.gradle
+++ b/server/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile 'org.apache.shiro:shiro-web:1.2.3'
     compile 'org.apache.shiro:shiro-spring:1.2.3'
     compile 'org.apache.shiro:shiro-aspectj:1.2.3'
+    compile 'mysql:mysql-connector-java:5.1.30'
 }
 
 
